@@ -3,7 +3,7 @@ package io.github.wybaby168.passguard;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertTimeout;
 
@@ -11,7 +11,8 @@ class PerformanceTest {
     @Test
     void performsFiftyThousandLocalAssessmentsWithinBudget() {
         PassGuard guard = PassGuard.builder()
-                .blocklist(new LocalBlocklist(List.of("123456", "password")))
+                .blocklist(new LocalBlocklist(
+                        Arrays.asList("123456", "password")))
                 .contextWords("PassGuard", "Example Corp")
                 .strengthEstimator(password -> 4)
                 .disablePwnedCheck()
